WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245970
Relative color syntax doesn't work with currentColor or system colors
https://bugs.webkit.org/show_bug.cgi?id=245970
Summary
Relative color syntax doesn't work with currentColor or system colors
Matthieu Dubet
Reported
2022-10-03 09:41:19 PDT
The CSS 5 color mutation functions (color-mix(), color-contrast(), relative color syntax) don't work with currentcolor or system-colors as one of their origin colors. This is due to the parser not being the right time to resolve those values, so some intermediate type is going to be needed to late resolve these things (perhaps time for a CSSColor object that can be resolved into a Color when appropriate). Depends on :
https://bugs.webkit.org/show_bug.cgi?id=234691
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-10 09:20:22 PDT
<
rdar://problem/100981965
>
Tim Nguyen (:ntim)
Comment 2
2023-01-21 22:27:30 PST
Bug 250459
fixes `color-mix()`. `color-contrast()` needs a brand new implementation given the new spec (`contrast-color()`) which is very different.
Ahmad Saleem
Comment 3
2024-02-02 09:51:12 PST
Should I link this bug to all InterOp 2024 tests for Relative Color Syntax (except Parsing):
https://wpt.fyi/results/css/css-color?label=master&label=experimental&aligned=&view=interop&q=label%3Ainterop-2024-relative-color
I am trying to get upstart in InterOp 2024 and trying to link bugs for easier tracking.
Matthieu Dubet
Comment 4
2024-02-02 10:29:23 PST
Yes indeed we should link this to Interop 2024. (I'm currently implementing this feature though - let's not duplicate work)
Sam Weinig
Comment 5
2024-04-09 10:34:48 PDT
Matt, you still working on this? If not, I would be happy to take this on.
Sam Weinig
Comment 6
2024-05-12 11:51:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28445
EWS
Comment 7
2024-05-13 10:16:47 PDT
Committed
278696@main
(c05a19a495bd): <
https://commits.webkit.org/278696@main
> Reviewed commits have been landed. Closing PR #28445 and removing active labels.
Roman Czerkies
Comment 8
2024-05-13 10:29:08 PDT
Hello Sam, is your work will include a fix for this issue 273996 ? (
https://bugs.webkit.org/show_bug.cgi?id=273996
)
Diego Pino
Comment 9
2024-05-14 09:26:28 PDT
Build bot 'GTK-Linux-64-bit-Release-Debian-11-Build' is failing after this patch with the following build error:
https://build.webkit.org/#/builders/992/builds/2243
``` ../../../Source/WebCore/css/parser/CSSPropertyParserConsumer+Color.cpp:439:65: error: expected ‘(’ before ‘{’ token 439 | return consumeColorSpace(args, [&]<typename Descriptor> { | ^ | ( ../../../Source/WebCore/css/parser/CSSPropertyParserConsumer+Color.cpp:444:61: error: expected ‘(’ before ‘{’ token ```
Diego Pino
Comment 10
2024-05-14 09:27:36 PDT
Re-opening for pull request
https://github.com/webkit/webkit/pull/28541
EWS
Comment 11
2024-05-14 09:32:30 PDT
Committed
278766@main
(005715370cbf): <
https://commits.webkit.org/278766@main
> Reviewed commits have been landed. Closing PR #28541 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug